# dev-tools-app

./: .gitmodules  AGENTS.md  bun.lockb  migration-outline.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/: command.tsx  globals.css  layout.tsx  page-transition.tsx  page.tsx
app/files/: page.tsx
app/http/: api.ts  page.tsx
app/kube/: api.tsx  page.tsx
app/settings/: page.tsx
app/soap/: page.tsx
components/ui/: button.tsx  combobox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  form.tsx  input.tsx  label.tsx  monaco.tsx  navbar.tsx  popover.tsx  resizable.tsx  sidebar.tsx  sonner.tsx  tabs.tsx  text-animate.tsx  title-bar.tsx  tooltip.tsx  typography.tsx
hooks/: file-drop.ts
lib/: utils.ts
providers/: events.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: commands.rs  error.rs  http_request.rs  lib.rs  main.rs
src-tauri/src/errors/: api_error.rs  aws_error.rs  dock_error.rs  kube_error.rs  mod.rs
src-tauri/src/services/: aws.rs  aws_s3.rs  dock_progress.rs  http.rs  http_request.rs  kube.rs  kube_config.rs  kube_log.rs  mod.rs  request.rs  shell.rs
src-tauri/src/states/: mod.rs  states.rs
src-tauri/src/utils/: color.rs  core.rs  crash_reporter.rs  graceful_degradation.rs  mod.rs  nodes.rs  progress_helper.rs  signal_handler.rs  state_emitter.rs  wsdl.rs  xml.rs
stores/: aws.ts  files.ts  index.ts  kube.ts
