[package]
name = "msms-dev-tools"
version = "0.1.0"
description = "Developer Tools"
authors = ["msms"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_dev_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
ms-util = { path = "../../../rust/ms-util" }
window-vibrancy = "0.5.2"
cocoa = "0.26.0"
reqwest = { version = "0.12.9", features = ["json", "multipart", "cookies", "stream", "socks", "gzip", "brotli", "charset", "rustls-tls", "hickory-dns"] }
tokio = { version = "1.40.0", features = ["full"] }
bon = "2.3.0"
tauri-plugin-shellx = "2.0.11"
tauri-plugin-system-info = "2.0.8"
base64 = "0.22.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
strum_macros = "0.26.4"
once_cell = "1.20.2"
libflate = "2.1.0"
time = "0.3.36"
chrono = "0.4.38"
cookie = "0.18.1"
cookie_store = "0.21.0"
brotli-decompressor = "4.0.1"
url = "2.5.3"
zip = "2.2.0"
anyhow = "1.0.90"
log = "0.4.22"
xml = "0.8.20"
resolve-path = "0.1.0"
roxmltree = "0.20.0"
tauri-plugin-drag = "2.0.0"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"

