[package]
name = "msms-dev-tools"
version = "0.1.0"
description = "Developer Tools"
authors = ["msms"]
edition = "2021"

[features]
visual_test = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_dev_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "~0.9.33"
window-vibrancy = "0.6.0"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSImage", "NSBezierPath", "NSColor"] }
objc2-foundation = "0.3.2"
reqwest = { version = "~0.12.9", features = ["json", "multipart", "cookies", "stream", "socks", "gzip", "brotli", "charset", "rustls-tls", "hickory-dns"] }
tokio = { version = "1.48.0", features = ["full"] }
bon = "3.8.1"
tauri-plugin-shellx = "2.0.16"
tauri-plugin-system-info = "2.0.9"
base64 = "0.22.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.40"
once_cell = "1.21.3"
chrono = "0.4.42"
cookie = "0.18.1"
cookie_store = "0.22.0"
url = "2.5.7"
zip = "6.0.0"
anyhow = "1.0.100"
log = "0.4.28"
xml = "1.0.1"
resolve-path = "0.1.0"
roxmltree = "0.21.1"
tauri-plugin-drag = "2.1.0"
tauri-plugin-dialog = "2.4.0"
dirs-next = "2"
env_logger = "0.11.8"
kube = "2.0.1"
k8s-openapi = { version = "~0.26.0", features = ["latest", "schemars"] }
aws-config = { version = "1.8.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.108.0"
uuid = { version = "1.11.0", features = ["v4"] }
thiserror = "2.0.17"
portable-pty = "0.9.0"
lazy_static = "1.5.0"
tauri-plugin-log = "2"

[dev-dependencies]
tempfile = "3.23.0"  # for tests with temporary files

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "~2.3"
tauri-plugin-window-state = "~2.4"
